--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,8 +19,15 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
+    //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'me.relex:circleindicator:1.2.2'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.12.1'
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'me.dm7.barcodescanner:zbar:1.8.4'
+    implementation 'com.android.support:support-v4:28.0.0'
 }
