updaed latest tody 7 26 am

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,17 @@
         <activity android:name=".Home" />
         <activity android:name=".GarbageCollection" />
         <activity android:name=".GarbageInvoices" />
+
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="${applicationId}.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@layout/provider_paths" />
+        </provider>
+
     </application>
 
 </manifest>
