--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,8 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation 'me.dm7.barcodescanner:zbar:1.8.4'
     implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+
 }
