--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,5 +33,5 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
-
+    implementation 'com.google.zxing:core:3.2.0'
 }
